bitbybit/tests/no_compile/invalid_bit_pos/invalid_bit_pos_array_u8.rs
use bitbybit::bitfield;

#[bitfield(u8, default = 0)]
struct Test {
    #[bits([0, 8], rw)]
    multi_bit_field: u2,
}

fn main() {}
